# crystal-castles-generator

./: .gitignore  Cargo.toml  README.md
core/: Cargo.toml  README.md
core/src/: config.rs  lib.rs  processor.rs
http-server/: Cargo.toml
http-server/src/: handlers.rs  main.rs  stream.rs
src/: config.rs  main.rs  processor.rs
test-gui/: Cargo.toml
test-gui/src/: main.rs
tests/: test1.json
