[package]
name = "crystal-castles-generator"
version = "0.1.0"
edition = "2024"

[dependencies]
image = "0.25.8"
imageproc = "0.24.0"
macroquad = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0.0"
rand = "0.8.5"
ab_glyph = "0.2.21"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["wincon"] }
