[package]
name = "http-server"
version = "0.1.0"
edition = "2024"

[dependencies]
core = { path = "../core" }
anyhow = "1.0.100"
async-native-tls = "0.5.0"
http-body-util = "0.1.3"
hyper = { version = "1.7.0", features = ["http1", "server"] }
macro_rules_attribute = "0.2.2"
smol = "2.0.2"
smol-hyper = "0.1.1"
smol-macros = "0.1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bytes = "1.10.1"
